tests/outputs/cif_filter_147.out
scripts/cif_filter: tests/cases/cif_filter_147.inp(3,13) data_strange: opening square brackets are reserved and may not start an unquoted string
_tag2 value [comment]
            ^
scripts/cif_filter: tests/cases/cif_filter_147.inp(3,13) data_strange: syntax error:
_tag2 value [comment]
            ^
scripts/cif_filter: tests/cases/cif_filter_147.inp: ERROR, 2 error(s) encountered while parsing the file.
